# imajin-templates

./: .cursorrules  README.md
php/laravel/: .dockerignore  .gitignore  Dockerfile  README.md  composer.json  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package.json  vite.config.js
php/laravel/.github/workflows/: ci.yml
php/laravel/docs/: DEVELOPMENT.md
php/laravel/resources/css/: app.css
php/laravel/resources/js/: app.js
php/laravel/resources/views/: dashboard.blade.php  welcome.blade.php
php/laravel/routes/: api.php  web.php
php/laravel/scripts/: dev.sh  setup.sh  test.sh
python/django/: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  manage.py  package.json  pyproject.toml
python/django/.github/workflows/: ci.yml
python/django/apps/api/: __init__.py  apps.py  urls.py  views.py
python/django/apps/core/: __init__.py  apps.py  tasks.py  urls.py  views.py
python/django/config/: __init__.py  celery.py  urls.py  wsgi.py
python/django/config/settings/: __init__.py  base.py  local.py  production.py  test.py
python/django/scripts/: dev.sh  entrypoint.sh  setup.sh  test-celery.sh  test.sh
python/django/static/css/: input.css  output.css
python/django/static/js/: app.js
python/django/templates/: base.html
python/django/templates/core/: about.html  dashboard.html  welcome.html
python/django/tests/: conftest.py
python/django/tests/api/: test_endpoints.py
python/django/tests/unit/: test_views.py
ruby/rails/: Dockerfile  Gemfile  Procfile.dev  README.md  docker-compose.yml
ruby/rails/config/: credentials.yml.enc  database.yml
ruby/rails/docs/: ARCHITECTURE.md  DEPLOYMENT.md
ruby/rails/scripts/: dev.sh  setup.sh  test.sh
ruby/sinatra/: .gitignore  Dockerfile  Gemfile  README.md  Rakefile  config.ru  docker-compose.yml  env.example
ruby/sinatra/config/: application.rb  database.rb  puma.rb
ruby/sinatra/db/: seeds.rb
ruby/sinatra/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
ruby/sinatra/scripts/: dev.sh  setup.sh  test.sh
ruby/sinatra/spec/: spec_helper.rb
typescript/nextjs/: README.md  package.json  pnpm-lock.yaml
(+20 files in other folders)
